src/components/pop/pop.scss
uex-pop {
  display: none;
}

.uex-pop {
  position: absolute;
  background: white;
  border: 1px solid rgba(0,0,0,.15);
  box-shadow: 0 5px 10px rgba(0,0,0,.12);
  border-radius: 6px;
  z-index: 1042;
  display: flex;
}

.uex-pop.ng-enter {
  transition: opacity linear 0.1s;
  opacity: 0;

  &.ng-enter-active {
    opacity: 1;
  }
}

.uex-pop.ng-leave {
  transition: opacity linear 0.1s;
  opacity: 1;

  &.ng-leave-active {
    opacity: 0;
  }
}

.uex-pop-bd {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
}

.uex-pop-content {
  padding: 10px;
  position: relative;
  overflow-x: hidden;
  overflow-y: auto;
  flex: 1;
}

